# [1.5.6] - 2019-04-03

## New

- Add example of settings layout

## Updated/fixes

- fixed RTL for top search and navigation
- fixed logo plan with RTL
- fixed sidebar display
- splitted/cleanup some SCSS files
- fixed white mode poc

# [1.5.5] - 2019-04-02

## New

- top search bar styles
- top navigation styles

## Updated/fixes

- splitted main template in several files for Design System website
- update documentation page on Sass variables


# [1.5.4] - 2019-04-01

## New

- put variables in `design-system-config`
- rewamped color pages
- add `h100` class
- added documentation page on Sass variables

## Updated/fixes

- add missing color in icons
- fix 404 page


# [1.5.3] - 2019-03-29

## New

- Plan under logo


# [1.5.2] - 2019-03-27

## New

- styles for conversations

## Updated/fixes

- “caret” has a single “r”.
- added modifier `.pm-button--for-icon` (for group button made of icons)
- add missing ` !default` to some variables
- add `shape-burger` icon (for design system website)


# [1.5.1] - 2019-03-26

## Updated/fixes

- remove `progress` tag to `meter` (for space used)
- added `white` classes (`fill-white` & `bg-white`)
- added `opacity-50` class (=> `opacity: .5`)
- doc for `flex-nowrap` class


# [1.5.0] - 2019-03-25

## New

- detect scroll on main navigation/display gradient
- add `disabled` style for toggle
- add `indeterminate` style for checkbox

## Updated/fixes

- Update button aliases to modifiers.

# [1.4.9] - 2019-03-22

## New

- added caret icon
- WIP: detect scroll on main navigation

## Updated/fixes

- Update toggle component, also fixed it in RTL version

# [1.4.7] - 2019-03-21

## New

- Tooltips styles
- RTL documentation
- added class `.mirror` in `sprite-for-css-only.svg` and in `_design-system-layout-modules.scss`

## Updated/fixes

- Missing paths `$path-images` in `_pm-loadingcontent.scss`

## Misc

- Fixed CSP issue on SVG sprite for CSS (Firefox... you really start to stress me up!)

# [1.4.6] - 2019-03-19

## New
