@@ -256,6 +256,27 @@ section: design
 </div>
 
 <div class="flex flex-nowrap onmobile-flex-column mb1">
+    <label for="id_toogle_slow" class="pm-label">
+        Active slooooow
+    </label>
+    <span>
+        <input type="checkbox" id="id_toogle_slow" class="pm-toggle-checkbox" value="wozaaa" />
+        <label for="id_toogle_slow" class="pm-toggle-label">
+            <span class="pm-toggle-label-text">
+                <svg viewBox="0 0 16 16" class="pm-toggle-label-img" aria-hidden="true" role="img" focusable="false">
+                    <use xlink:href="#shape-off"></use>
+                </svg>
+            </span>
+            <span class="pm-toggle-label-text">
+                <svg viewBox="0 0 16 16" class="pm-toggle-label-img" aria-hidden="true" role="img" focusable="false">
+                    <use xlink:href="#shape-on"></use>
+                </svg>
+            </span>
+        </label>
+    </span>
+</div>
+
+<div class="flex flex-nowrap onmobile-flex-column mb1">
     <label for="id_toogle_disabled" class="pm-label">
         Shit, it's disabled
     </label>
