@@ -2,7 +2,8 @@
 
 ## New
 
-- Add example of settings layout
+- add example of settings layout
+- add `aria-busy="true"` state to toggle
 
 ## Updated/fixes
 
